# rpg-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/sqlite/: README.md
res/: model.glsl.fs  model.glsl.vs  model_basic_lighting.glsl.fs  model_light_map.glsl.fs
res/cube/: Cube.mtl
res/cube_texture_mapping/: Cube.mtl
res/deferred_shading/: g_pass.glsl.frag  g_pass.glsl.fs  g_pass.glsl.vert  g_pass_indirect.glsl.vert  g_pass_normal.glsl.frag  g_pass_normal.glsl.vert  l_pass.glsl.frag  l_pass.glsl.vs
res/forward_pass/: model.glsl.vert  model_indirect.glsl.vert  model_light_map.glsl.frag  model_normal.glsl.vert  pbr_combined.glsl  pbr_normal.glsl.frag  pbr_normal_experiment.glsl.frag  pbr_normal_experiment2.glsl.frag
res/models/icosphere/: icosphere.blend  icosphere.mtl
res/models/physics_cube/: cube.mtl
res/models/physics_plane/: plane.mtl
src/: app.cpp  app.hpp  character.cpp  character.hpp  deltatime.cpp  deltatime.hpp  gear.cpp  gear.hpp  main.cpp  pch.hpp  scene.cpp  scene.hpp
src/game_logic/: character.hpp
src/json/: README.md
src/physics/: engine.cpp  engine.hpp  helpers.hpp
src/renderer/: CMakeLists.txt  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  extensions.cpp  extensions.hpp  framebuffer.cpp  framebuffer.hpp  frustum_culling.cpp  frustum_culling.hpp  gbuffer.cpp  gbuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  quad.cpp  quad.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  shadowmap.cpp  shadowmap.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/renderer/dep/glad/: CMakeLists.txt
src/renderer/dep/glad/include/glad/: glad.h
src/renderer/dep/glad/src/: glad.c
src/renderer/dep/stb_image/: CMakeLists.txt
src/renderer/include/: buffer.hpp  camera.hpp  framebuffer.hpp  pch.hpp  renderer.hpp
src/renderer/light/: directional.cpp  directional.hpp  point.cpp  point.hpp
src/renderer/light/pbr/: directional.cpp  directional.hpp  point.cpp  point.hpp  spot.cpp  spot.hpp
src/renderer/light/phong/: directional.cpp  directional.hpp  point.cpp  point.hpp
src/renderer/src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  frustum.hpp  pch.hpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/scene/: entity_builder.cpp  entity_builder.hpp  scene.cpp  scene.hpp  scene_shaders.hpp  scene_shaders_pbr.hpp  scene_shaders_phong.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp
src/sqlite/: CMakeLists.txt
src/utils/: assert.hpp  cache.hpp  default.hpp  deltatime.cpp  deltatime.hpp  file.hpp  log.hpp  mapping.hpp
